# still

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  personal-newspaper-spec.md  pyproject.toml
.github/workflows/: ci.yml
backlog/: config.yml
backlog/tasks/: task-1 - Wire-up-Reddit-ingestion-Phase-3.md  task-10 - Your-Day-require-a-real-attendee-show-meeting-title.md  task-11 - Weather-simplify-to-daily-general-rain-snow-indicator-icon.md  task-12 - Migrate-reddit-ingestion-off-praw-OAuth-to-public-RSS.md  task-13 - Reduce-repeated-Margin-lessons-and-French-vocab-across-editions.md  task-14 - Deterministic-fixed-two-page-layout-replace-auto-fit-sizing.md  task-2 - Spotify-one-off-pull-to-bias-Shows-Music-news.md  task-3 - Cross-day-topic-dedup-avoid-re-covering-the-same-story.md  task-4 - Fix-repeating-French-vocab-fallback-words.md  task-5 - Fix-pagination-thin-trailing-page-1-2-stories-Lexicon.md  task-6 - Remove-Sources-References-footer.md  task-7 - Plain-English-engineering-vulnerability-writing.md  task-8 - Scoreboard-config-driven-order-incl.-IndyCar-interleaved.md  task-9 - Add-per-story-locator-footnote-Vol-Edition-Story-No..md
config/: still.yaml
scripts/: preview_scoreboard.py  smoke_render.py  spotify_pull.py
tests/: test_badges.py  test_calendar.py  test_config.py  test_db.py  test_editorial.py  test_editorial_retry.py  test_ingest.py  test_layout.py  test_lessons.py  test_pdf.py  test_pipeline.py  test_quotes.py  test_reddit.py  test_render.py  test_shows.py  test_sports.py  test_vocab.py  test_weather.py
(+30 files in other folders)
